iphone image stretch fix

--- a/src/sdt.css
+++ b/src/sdt.css
@@ -1,15 +1,16 @@
 .topen body {overflow-y: hidden;overflow-x: hidden;}
 
-.sdt-main {position: fixed; top: 0; bottom:0; left: 0;max-width:147px;}
+.sdt-main {position: fixed; top: 0; left: 0;max-width:147px; max-height: 148px;}
 
 .sdt-content {}
 .sdt-inner,
 .sdt-cnr {position: relative;}
 
 .sdt-main .sdt-cnr img.stretch {width: 100%; height: auto;}
-.sdt-main .sdt-cnr a {display: block; width: 100%; height: 100%;top: 0; bottom: 0; left: 0;right: 0;}
+.sdt-main .sdt-cnr a {display: block; width: 100%; height: 100%;top: 0; bottom: 0; left: 0;right: 0;border: none; text-decoration: none;}
+.sdt-main .sdt-cnr a img {border: none; text-decoration: none;}
 .sdt-main .sdt-cnr #sdtopen img {width: 100%; height: 100%;}
-.sdt-main .sdt-cnr img#sdtfacebanner2 {position: absolute;top:0;left:0;display:block;}
+.sdt-main .sdt-cnr img#sdtfacebanner2 {position: absolute;top:0;left:0;display:block;opacity: 0; }
 
 .sdt-main .sdt-cnr .sdtcnrtxt-container {top: 0; left: 0; right: 50.34%; }
 .sdt-main .sdt-cnr .sdtcnrtxt-container img {width: 100%; height: auto; }
